@@ -247,16 +247,22 @@ export const generateRandom = (prefix, sufix) => {
  * @function
  * @param {String} serverUrl URL.
  * @param {String} version Versión.
+ * @param {String} ticket Ticket.
  * @returns {String} Devuelve los metadatos.
  * @api
  */
-export const getWMSGetCapabilitiesUrl = (serverUrl, version) => {
+export const getWMSGetCapabilitiesUrl = (serverUrl, version, ticket = false) => {
   let wmsGetCapabilitiesUrl = serverUrl;
 
   // request
   wmsGetCapabilitiesUrl = addParameters(wmsGetCapabilitiesUrl, 'request=GetCapabilities');
   // service
   wmsGetCapabilitiesUrl = addParameters(wmsGetCapabilitiesUrl, 'service=WMS');
+
+  // ticket
+  if (isString(ticket)) {
+    wmsGetCapabilitiesUrl = addParameters(wmsGetCapabilitiesUrl, { ticket });
+  }
 
   // PATCH: En api-idee 3 no se manda luego aquí tampoco. Hay servicios que dan error....
   //       version
