@@ -687,15 +687,28 @@ class WMS extends LayerBase {
       const projection = this.map.getProjection();
       this.getCapabilitiesPromise = new Promise((success, fail) => {
         // gest the capabilities URL
-        const wmsGetCapabilitiesUrl = getWMSGetCapabilitiesUrl(layerUrl, layerVersion);
+        const wmsGetCapabilitiesUrl = getWMSGetCapabilitiesUrl(
+          layerUrl,
+          layerVersion,
+          IDEE.config.TICKET,
+        );
         // gets the getCapabilities response
         getRemote(wmsGetCapabilitiesUrl).then((response) => {
-          const getCapabilitiesDocument = response.xml;
-          const getCapabilitiesParser = new FormatWMS();
-          const getCapabilities = getCapabilitiesParser.customRead(getCapabilitiesDocument);
-
-          const getCapabilitiesUtils = new GetCapabilities(getCapabilities, layerUrl, projection);
-          success(getCapabilitiesUtils);
+          if ('xml' in response && !isNullOrEmpty(response.xml)) {
+            const getCapabilitiesDocument = response.xml;
+            const getCapabilitiesParser = new FormatWMS();
+            const getCapabilities = getCapabilitiesParser.customRead(getCapabilitiesDocument);
+            const getCapabilitiesUtils = new GetCapabilities(getCapabilities, layerUrl, projection);
+            success(getCapabilitiesUtils);
+          } else {
+            getRemote(wmsGetCapabilitiesUrl, '', { ticket: false }).then((response2) => {
+              const getCapabilitiesDocument = response2.xml;
+              const getCapabilitiesParser = new FormatWMS();
+              const getCapabilities = getCapabilitiesParser.customRead(getCapabilitiesDocument);
+              const capabilities = new GetCapabilities(getCapabilities, layerUrl, projection);
+              success(capabilities);
+            });
+          }
         });
       });
       capabilitiesInfo.capabilities = this.getCapabilitiesPromise;
